Updates chapter4.md
Auto commit by GitBook Editor